5316.	[func]		A new "dnssec-policy" option has been added to
			named.conf to implement a key and signing policy
			(KASP) for zones. When this option is in use,
			named can generate new keys as needed and
			automatically roll both ZSK and KSK keys. (Note
			that the syntax for this statement differs from
			the dnssec policy used by dnssec-keymgr.)

			See the ARM for configuration details. [GL #1134]

5315.	[bug]		Apply the inital RRSIG expiration spread fixed
			to all dynamically created records in the zone
			including NSEC3. Also fix the signature clusters
			when the server has been offline for prolonged
			period of times. [GL #1256]

5314.	[func]		Added a new statistics variable "tcp-highwater"
			that reports the maximum number of simultaneous TCP
			clients BIND has handled while running. [GL #1206]

5313.	[bug]		The default GeoIP2 database location did not match
			the ARM.  'named -V' now reports the default
			location. [GL #1301]

5312.	[bug]		Do not flush the cache for `rndc validation status`.
			Thanks to Tony Finch. [GL !2462]

5311.	[cleanup]	Include all views in output of `rndc validation status`.
			Thanks to Tony Finch. [GL !2461]

5310.	[bug]		TCP failures were affecting EDNS statistics. [GL #1059]

5309.	[placeholder]

5308.	[bug]		Don't log DNS_R_UNCHANGED from sync_secure_journal()
			at ERROR level in receive_secure_serial(). [GL #1288]

5307.	[bug]		Fix hang when named-compilezone output is sent to pipe.
			Thanks to Tony Finch. [GL !2481]

5306.	[placeholder]

5305.	[bug]		NSEC Aggressive Cache ("synth-from-dnssec") has been
			disabled by default because it was found to have
			a significant performance impact on the recursive
			service. [GL #1265]

5304.	[bug]		"dnskey-sig-validity 0;" was not being accepted.
			[GL #876]

5303.	[placeholder]

5302.	[bug]		Fix checking that "dnstap-output" is defined when
			"dnstap" is specified in a view. [GL #1281]

5301.	[bug]		Detect partial prefixes / incomplete IPv4 address in